# QuantLab

./: CHANGELOG.md  CMakeLists.txt  README.md  main.cpp  quantfusion
dashboard/: README.md  app.js  index.html  styles.css
dashboard/data/: nav.csv  trades.csv
docs/: ARCHITECTURE.md
live_trading/: README.md
research/alpha_factory/: README.md
research/factors/: README.md
research/notebooks/: 01_alpha_research_workflow.py  README.md
src/alpha_factory/: AlphaFactory.h
src/analytics/: Analytics.h  BenchmarkComparison.h
src/core/: Clock.h  LockFree.h  SymbolRegistry.h  ThreadPool.h  Types.h
src/data/: DataManager.h  DataPipeline.h
src/events/: EventBus.h
src/execution/: OrderBook.h  SlippageEngine.h
src/factors/: AlphaEngine.h
src/microstructure/: Microstructure.h
src/optimizer/: Optimizer.h
src/portfolio/: Portfolio.h  PortfolioConstruction.h
src/python_bridge/: PyBridge.cpp
src/ranking/: StrategyRanker.h  StrategyRegistry.h
src/regimes/: RegimeEngine.h
src/risk/: RiskEngine.h
src/simulation/: Backtester.h  ExampleStrategies.h  MarketSimulator.h  PortfolioStrategy.h  RegimeDetection.h
src/storage/: StorageEngine.h
src/validation/: RobustnessEngine.h  WalkForwardValidator.h
tests/: README.md
visualizer/: FILE_STRUCTURE.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  START_HERE.md  __init__.py  dashboard.py  data_export.py  example_export.py  requirements.txt  run_dashboard.bat  run_dashboard.sh  setup.py
